clusters/pi-cluster/apps/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
      - name: homepage
        image: ghcr.io/gethomepage/homepage:latest
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: config
            mountPath: /app/config # Homepage looks here by default
            subPath: settings.yaml
      volumes:
        - name: config
          configMap:
            name: homepage-config
